@@ -26,6 +26,7 @@ import javax.inject.Named;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.xwiki.eventstream.Event;
 import org.xwiki.job.GroupedJobInitializer;
 import org.xwiki.job.JobGroupPath;
 import org.xwiki.model.reference.DocumentReference;
@@ -33,6 +34,7 @@ import org.xwiki.model.reference.EntityReferenceSerializer;
 import org.xwiki.notifications.CompositeEvent;
 import org.xwiki.notifications.CompositeEventStatus;
 import org.xwiki.notifications.CompositeEventStatusManager;
+import org.xwiki.notifications.GroupingEventManager;
 import org.xwiki.notifications.sources.NotificationParameters;
 import org.xwiki.notifications.sources.ParametrizedNotificationManager;
 import org.xwiki.rendering.async.internal.AsyncRendererResult;
@@ -79,6 +81,9 @@ class DefaultAsyncNotificationRendererTest
     @Named("AsyncNotificationRenderer")
     private GroupedJobInitializer jobInitializer;
 
+    @MockComponent
+    private GroupingEventManager groupingEventManager;
+
     private NotificationParameters notificationParameters;
 
     @BeforeEach
@@ -113,11 +118,22 @@ class DefaultAsyncNotificationRendererTest
     @Test
     void render() throws Exception
     {
-        List<CompositeEvent> compositeEventList = Arrays.asList(
+        List<Event> eventList = Arrays.asList(
+            mock(Event.class),
+            mock(Event.class),
+            mock(Event.class),
+            mock(Event.class)
+        );
+
+        when(this.notificationManager.getRawEvents(notificationParameters)).thenReturn(eventList);
+
+        List<CompositeEvent> compositeEventList = List.of(
             mock(CompositeEvent.class),
             mock(CompositeEvent.class)
         );
-        when(this.notificationManager.getEvents(notificationParameters)).thenReturn(compositeEventList);
+
+        when(this.groupingEventManager.getCompositeEvents(eventList, USER_SERIALIZED_REFERENCE, "alert"))
+            .thenReturn(compositeEventList);
 
         List<CompositeEventStatus> compositeEventStatusList = Arrays.asList(
             mock(CompositeEventStatus.class),
@@ -125,7 +141,7 @@ class DefaultAsyncNotificationRendererTest
         );
         when(this.compositeEventStatusManager.getCompositeEventStatuses(compositeEventList, USER_SERIALIZED_REFERENCE))
             .thenReturn(compositeEventStatusList);
-        notificationParameters.expectedCount = 2;
+        notificationParameters.expectedCount = 4;
         when(this.htmlNotificationRenderer.render(compositeEventList, compositeEventStatusList, true))
             .thenReturn("Expected result!");
 
@@ -134,27 +150,33 @@ class DefaultAsyncNotificationRendererTest
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
         assertEquals(new AsyncRendererResult("Expected result!"), this.asyncNotificationRenderer.render(false, false));
         verify(this.notificationCacheManager).getFromCache(CACHE_KEY, false);
-        verify(this.notificationCacheManager).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager).setInCache(CACHE_KEY, eventList, false);
 
         // Test2: get count of 2 events, without cache
-        when(this.htmlNotificationRenderer.render(2)).thenReturn("Expected count result!");
+        when(this.htmlNotificationRenderer.render(4)).thenReturn("Expected count result!");
         this.asyncNotificationRenderer.initialize(
             new NotificationAsyncRendererConfiguration(notificationParameters, true));
         assertEquals(new AsyncRendererResult("Expected count result!"),
             this.asyncNotificationRenderer.render(true, true));
         verify(this.notificationCacheManager).getFromCache(CACHE_KEY, true);
-        verify(this.notificationCacheManager).setInCache(CACHE_KEY, compositeEventList, true);
+        verify(this.notificationCacheManager).setInCache(CACHE_KEY, eventList, true);
 
         // Test3: get 1 event with cache
-        compositeEventList = Arrays.asList(
+        eventList = Arrays.asList(
+            mock(Event.class)
+        );
+        compositeEventList = List.of(
             mock(CompositeEvent.class)
         );
+
+        when(this.groupingEventManager.getCompositeEvents(eventList, USER_SERIALIZED_REFERENCE, "alert"))
+            .thenReturn(compositeEventList);
         compositeEventStatusList = Arrays.asList(
             mock(CompositeEventStatus.class)
         );
         when(this.compositeEventStatusManager.getCompositeEventStatuses(compositeEventList, USER_SERIALIZED_REFERENCE))
             .thenReturn(compositeEventStatusList);
-        when(this.notificationCacheManager.getFromCache(CACHE_KEY, false)).thenReturn(compositeEventList);
+        when(this.notificationCacheManager.getFromCache(CACHE_KEY, false)).thenReturn(eventList);
 
         when(this.htmlNotificationRenderer.render(compositeEventList, compositeEventStatusList, false))
             .thenReturn("Expected cache result!");
@@ -162,7 +184,7 @@ class DefaultAsyncNotificationRendererTest
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
         assertEquals(new AsyncRendererResult("Expected cache result!"),
             this.asyncNotificationRenderer.render(true, false));
-        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY, eventList, false);
 
         when(this.notificationCacheManager.getFromCache(CACHE_KEY, true)).thenReturn(1);
         when(this.htmlNotificationRenderer.render(1))
@@ -171,26 +193,37 @@ class DefaultAsyncNotificationRendererTest
             new NotificationAsyncRendererConfiguration(notificationParameters, true));
         assertEquals(new AsyncRendererResult("Expected count cache result!"),
             this.asyncNotificationRenderer.render(false, true));
-        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager, never()).setInCache(CACHE_KEY, eventList, false);
     }
 
     @Test
     void renderUserNull() throws Exception
     {
         notificationParameters.user = null;
-        List<CompositeEvent> compositeEventList = Arrays.asList(
+        List<Event> eventList = Arrays.asList(
+            mock(Event.class),
+            mock(Event.class),
+            mock(Event.class),
+            mock(Event.class)
+        );
+
+        when(this.notificationManager.getRawEvents(notificationParameters)).thenReturn(eventList);
+
+        List<CompositeEvent> compositeEventList = List.of(
             mock(CompositeEvent.class),
             mock(CompositeEvent.class)
         );
-        when(this.notificationManager.getEvents(notificationParameters)).thenReturn(compositeEventList);
-        notificationParameters.expectedCount = 2;
+
+        when(this.groupingEventManager.getCompositeEvents(eventList, null, "alert"))
+            .thenReturn(compositeEventList);
+        notificationParameters.expectedCount = 4;
         when(this.htmlNotificationRenderer.render(compositeEventList, null, true))
             .thenReturn("Expected result!");
         this.asyncNotificationRenderer.initialize(
             new NotificationAsyncRendererConfiguration(notificationParameters, false));
         assertEquals(new AsyncRendererResult("Expected result!"), this.asyncNotificationRenderer.render(false, false));
         verify(this.notificationCacheManager).getFromCache(CACHE_KEY, false);
-        verify(this.notificationCacheManager).setInCache(CACHE_KEY, compositeEventList, false);
+        verify(this.notificationCacheManager).setInCache(CACHE_KEY, eventList, false);
         verify(this.compositeEventStatusManager, never()).getCompositeEventStatuses(any(), any());
     }
 
